fix: bugfix controls & imports

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <div class="menu fullscreen">
-        <div class="menu content">
+        <div class="menu_content">
             <h1>Pop Game</h1>
             <button class="single">Single player</button>
             <button class="multi">Multi player</button>
+            <p>First player: WASD + Space</p>
+            <p>Second player: Arrows + Period (.)</p>
         </div>
     </div>
     <div class="app hidden"></div>
