--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer type="module" src="script.js"></script>
 </head>
 <body>
-    <div class="menu fullscreen">
+    <div class="menu fullscreen hidden">
         <div class="menu_content">
             <h1>Pop Game</h1>
             <button class="single">Single player</button>
@@ -26,7 +26,7 @@
     </div>
     <div class="interface hidden">
         <div class="killed"></div>
-        <div class="hp"></div>
+        <!-- <div class="hp"></div> -->
     </div>
 </body>
 </html>
